# mira-memory-engine

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  Dockerfile  Makefile  README.md  benchmark_results.txt  docker-compose.yml  env.example  pyproject.toml  render.yaml  requirements.txt
app/: __init__.py  config.py  main.py
app/api/: __init__.py  deps.py  routes.py  websocket.py
app/core/: __init__.py  chunker.py  context.py  memory.py
app/models/: __init__.py  domain.py  schemas.py
app/services/: __init__.py  embeddings.py  llm.py  stt.py  vectordb.py
app/utils/: __init__.py  latency.py  logging.py  uptime.py
frontend/: Dockerfile  env.production.example  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: AudioRecorder.tsx  LatencyMetrics.tsx  MemoryList.tsx  QueryInput.tsx  ResponseStream.tsx  TextIngest.tsx  TranscriptView.tsx
frontend/src/hooks/: useAudioStream.ts  useWebSocket.ts
frontend/src/services/: api.ts
infra/: otel-collector-config.yaml  prometheus.yml
infra/k8s/: deployment.yaml  service.yaml
infra/terraform/: main.tf  outputs.tf  variables.tf
scripts/: benchmark.py  eval_datasets.py  evaluate.py  seed_data.py
tests/: __init__.py  conftest.py  test_e2e.py  test_latency.py  test_memory.py  test_stt.py
